--- a/Project 1 Data Katrina.ipynb
+++ b/Project 1 Data Katrina.ipynb
@@ -1094,10 +1094,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "0cf1395f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>NORPOP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1/1/2000</td>\n",
+       "      <td>1315.616</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1/1/2001</td>\n",
+       "      <td>1311.131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1/1/2002</td>\n",
+       "      <td>1311.390</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1/1/2003</td>\n",
+       "      <td>1312.039</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1/1/2004</td>\n",
+       "      <td>1314.721</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       DATE    NORPOP\n",
+       "0  1/1/2000  1315.616\n",
+       "1  1/1/2001  1311.131\n",
+       "2  1/1/2002  1311.390\n",
+       "3  1/1/2003  1312.039\n",
+       "4  1/1/2004  1314.721"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#import Econ data from New Orleans\n",
     "\n",
@@ -1109,10 +1178,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "e4675978",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Hurricane</th>\n",
+       "      <th>Hurricane Date</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Hurricane Year</th>\n",
+       "      <th>Population Year</th>\n",
+       "      <th>Delta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2001-01-01</td>\n",
+       "      <td>1311.131</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>-4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2002-01-01</td>\n",
+       "      <td>1311.390</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>-3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2003-01-01</td>\n",
+       "      <td>1312.039</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>-2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2004-01-01</td>\n",
+       "      <td>1314.721</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2005-01-01</td>\n",
+       "      <td>1313.460</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        DATE  Population Hurricane Hurricane Date                Location  \\\n",
+       "1 2001-01-01    1311.131   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "2 2002-01-01    1311.390   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "3 2003-01-01    1312.039   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "4 2004-01-01    1314.721   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "5 2005-01-01    1313.460   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "\n",
+       "   Hurricane Year  Population Year  Delta  \n",
+       "1            2005             2001     -4  \n",
+       "2            2005             2002     -3  \n",
+       "3            2005             2003     -2  \n",
+       "4            2005             2004     -1  \n",
+       "5            2005             2005      0  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# remove rows prior to 2001\n",
     "\n",
@@ -1147,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "f94fab04",
    "metadata": {},
    "outputs": [],
@@ -1195,7 +1376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d1ccc64",
+   "id": "41856346",
    "metadata": {},
    "outputs": [],
    "source": []
