--- a/Project 1 Data Ike.ipynb
+++ b/Project 1 Data Ike.ipynb
@@ -1162,21 +1162,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "171c4b36",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'pandas' has no attribute 'Ike_Pop_df'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\LUNACL~1\\AppData\\Local\\Temp/ipykernel_17676/1387590824.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[0mIke_Pop_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Hurricane Year'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_datetime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mIke_Pop_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Hurricane Date'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'%Y%m%d'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m \u001b[0mIke_Pop_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Hurricane Year'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mIke_Pop_df\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mIke_Pop_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Hurricane Year'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0myear\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[0mIke_Pop_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Population Year'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_datetime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mIke_Pop_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'DATE'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'%Y%m%d'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\__init__.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(name)\u001b[0m\n\u001b[0;32m    242\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0m_SparseArray\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    243\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 244\u001b[1;33m     \u001b[1;32mraise\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"module 'pandas' has no attribute '{name}'\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    245\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    246\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'pandas' has no attribute 'Ike_Pop_df'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Hurricane</th>\n",
+       "      <th>Hurricane Date</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Hurricane Year</th>\n",
+       "      <th>Population Year</th>\n",
+       "      <th>Delta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2001-01-01</td>\n",
+       "      <td>254.502</td>\n",
+       "      <td>Ike</td>\n",
+       "      <td>2008-09-13</td>\n",
+       "      <td>Galveston</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>-7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2002-01-01</td>\n",
+       "      <td>260.034</td>\n",
+       "      <td>Ike</td>\n",
+       "      <td>2008-09-13</td>\n",
+       "      <td>Galveston</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>-6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2003-01-01</td>\n",
+       "      <td>265.120</td>\n",
+       "      <td>Ike</td>\n",
+       "      <td>2008-09-13</td>\n",
+       "      <td>Galveston</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>-5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2004-01-01</td>\n",
+       "      <td>269.458</td>\n",
+       "      <td>Ike</td>\n",
+       "      <td>2008-09-13</td>\n",
+       "      <td>Galveston</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>-4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2005-01-01</td>\n",
+       "      <td>274.354</td>\n",
+       "      <td>Ike</td>\n",
+       "      <td>2008-09-13</td>\n",
+       "      <td>Galveston</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>-3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        DATE  Population Hurricane Hurricane Date   Location  Hurricane Year  \\\n",
+       "0 2001-01-01     254.502       Ike     2008-09-13  Galveston            2008   \n",
+       "1 2002-01-01     260.034       Ike     2008-09-13  Galveston            2008   \n",
+       "2 2003-01-01     265.120       Ike     2008-09-13  Galveston            2008   \n",
+       "3 2004-01-01     269.458       Ike     2008-09-13  Galveston            2008   \n",
+       "4 2005-01-01     274.354       Ike     2008-09-13  Galveston            2008   \n",
+       "\n",
+       "   Population Year  Delta  \n",
+       "0             2001     -7  \n",
+       "1             2002     -6  \n",
+       "2             2003     -5  \n",
+       "3             2004     -4  \n",
+       "4             2005     -3  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1194,14 +1293,14 @@
     "\n",
     "Ike_Pop_df['Hurricane Year'] = pd.to_datetime(Ike_Pop_df['Hurricane Date'],format='%Y%m%d')\n",
     "\n",
-    "Ike_Pop_df['Hurricane Year'] = pd.Ike_Pop_df(Ike_Pop_df['Hurricane Year']).year\n",
+    "Ike_Pop_df['Hurricane Year'] = pd.DatetimeIndex(Ike_Pop_df['Hurricane Year']).year\n",
     "\n",
     "Ike_Pop_df['Population Year'] = pd.to_datetime(Ike_Pop_df['DATE'],format='%Y%m%d')\n",
     "\n",
     "Ike_Pop_df['Population Year'] = pd.DatetimeIndex(Ike_Pop_df['Population Year']).year\n",
     "\n",
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
-    "Ike_Pop_df['Delta'] = ((Ike_Pop_df['DATE'] - Ike_Pop_df['Hurricane Date']).dt.days/365)\n",
+    "Ike_Pop_df['Delta'] = ((Ike_Pop_df['Population Year'] - Ike_Pop_df['Hurricane Year']))\n",
     "\n",
     "Ike_Pop_df['Delta'] = Ike_Pop_df['Delta'].astype(int)\n",
     "\n",
@@ -1213,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "aea1c14e",
    "metadata": {},
    "outputs": [],
