Rita pop date fix

--- a/Project 1 Data Rita.ipynb
+++ b/Project 1 Data Rita.ipynb
@@ -144,7 +144,7 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-4</td>\n",
+       "      <td>-4.715068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
@@ -153,7 +153,7 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-3</td>\n",
+       "      <td>-3.715068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
@@ -162,7 +162,7 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-2</td>\n",
+       "      <td>-2.715068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
@@ -171,7 +171,7 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>-1.715068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
@@ -180,7 +180,7 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-0.712329</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -194,12 +194,12 @@
        "29 2004-01-01               117.15      Rita     2005-09-18  Houston Area   \n",
        "30 2005-01-01               121.90      Rita     2005-09-18  Houston Area   \n",
        "\n",
-       "    Delta  \n",
-       "26     -4  \n",
-       "27     -3  \n",
-       "28     -2  \n",
-       "29     -1  \n",
-       "30      0  "
+       "       Delta  \n",
+       "26 -4.715068  \n",
+       "27 -3.715068  \n",
+       "28 -2.715068  \n",
+       "29 -1.715068  \n",
+       "30 -0.712329  "
       ]
      },
      "execution_count": 3,
@@ -224,7 +224,7 @@
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
     "rita_Housing_df['Delta'] = ((rita_Housing_df['DATE'] - rita_Housing_df['Hurricane Date']).dt.days/365)\n",
     "\n",
-    "rita_Housing_df['Delta'] = rita_Housing_df['Delta'].astype(int)\n",
+    "rita_Housing_df['Delta'] = rita_Housing_df['Delta'].astype(float)\n",
     "\n",
     "#Rename column \n",
     "rita_Housing_df = rita_Housing_df.rename(columns={'ATNHPIUS48201A': 'Housing Price Index'})\n",
@@ -359,7 +359,7 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-4</td>\n",
+       "      <td>-4.715068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -368,7 +368,7 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-3</td>\n",
+       "      <td>-3.715068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -377,7 +377,7 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-2</td>\n",
+       "      <td>-2.715068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -386,7 +386,7 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>-1.715068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -395,7 +395,7 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-0.712329</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -409,12 +409,12 @@
        "14 2004-01-01                                      36395      Rita   \n",
        "15 2005-01-01                                      41506      Rita   \n",
        "\n",
-       "   Hurricane Date      Location  Delta  \n",
-       "11     2005-09-18  Houston Area     -4  \n",
-       "12     2005-09-18  Houston Area     -3  \n",
-       "13     2005-09-18  Houston Area     -2  \n",
-       "14     2005-09-18  Houston Area     -1  \n",
-       "15     2005-09-18  Houston Area      0  "
+       "   Hurricane Date      Location     Delta  \n",
+       "11     2005-09-18  Houston Area -4.715068  \n",
+       "12     2005-09-18  Houston Area -3.715068  \n",
+       "13     2005-09-18  Houston Area -2.715068  \n",
+       "14     2005-09-18  Houston Area -1.715068  \n",
+       "15     2005-09-18  Houston Area -0.712329  "
       ]
      },
      "execution_count": 5,
@@ -439,7 +439,7 @@
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
     "rita_HousingAuthorized_df['Delta'] = ((rita_HousingAuthorized_df['DATE'] - rita_HousingAuthorized_df['Hurricane Date']).dt.days/365)\n",
     "\n",
-    "rita_HousingAuthorized_df['Delta'] = rita_HousingAuthorized_df['Delta'].astype(int)\n",
+    "rita_HousingAuthorized_df['Delta'] = rita_HousingAuthorized_df['Delta'].astype(float)\n",
     "\n",
     "#Rename column \n",
     "rita_HousingAuthorized_df = rita_HousingAuthorized_df.rename(columns={'BPPRIV048201': 'New Private Housing Structures Authorized'})\n",
@@ -578,7 +578,7 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-4</td>\n",
+       "      <td>-4.715068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -587,7 +587,7 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-3</td>\n",
+       "      <td>-3.715068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -596,7 +596,7 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-2</td>\n",
+       "      <td>-2.715068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -605,7 +605,7 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>-1.715068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -614,19 +614,19 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-0.712329</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        DATE   Real GDP Hurricane Hurricane Date      Location  Delta\n",
-       "0 2001-01-01  244128701      Rita     2005-09-18  Houston Area     -4\n",
-       "1 2002-01-01  242658014      Rita     2005-09-18  Houston Area     -3\n",
-       "2 2003-01-01  243159988      Rita     2005-09-18  Houston Area     -2\n",
-       "3 2004-01-01  265896284      Rita     2005-09-18  Houston Area     -1\n",
-       "4 2005-01-01  269128633      Rita     2005-09-18  Houston Area      0"
+       "        DATE   Real GDP Hurricane Hurricane Date      Location     Delta\n",
+       "0 2001-01-01  244128701      Rita     2005-09-18  Houston Area -4.715068\n",
+       "1 2002-01-01  242658014      Rita     2005-09-18  Houston Area -3.715068\n",
+       "2 2003-01-01  243159988      Rita     2005-09-18  Houston Area -2.715068\n",
+       "3 2004-01-01  265896284      Rita     2005-09-18  Houston Area -1.715068\n",
+       "4 2005-01-01  269128633      Rita     2005-09-18  Houston Area -0.712329"
       ]
      },
      "execution_count": 7,
@@ -651,7 +651,7 @@
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
     "rita_real_GDP_df['Delta'] = ((rita_real_GDP_df['DATE'] - rita_real_GDP_df['Hurricane Date']).dt.days/365)\n",
     "\n",
-    "rita_real_GDP_df['Delta'] = rita_real_GDP_df['Delta'].astype(int)\n",
+    "rita_real_GDP_df['Delta'] = rita_real_GDP_df['Delta'].astype(float)\n",
     "\n",
     "#Rename column \n",
     "rita_real_GDP_df = rita_real_GDP_df.rename(columns={'REALGDPALL48201': 'Real GDP'})\n",
@@ -786,7 +786,7 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-4</td>\n",
+       "      <td>-4.715068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>133</th>\n",
@@ -795,7 +795,7 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-4</td>\n",
+       "      <td>-4.630137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>134</th>\n",
@@ -804,7 +804,7 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-4</td>\n",
+       "      <td>-4.553425</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>135</th>\n",
@@ -813,7 +813,7 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-4</td>\n",
+       "      <td>-4.468493</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>136</th>\n",
@@ -822,19 +822,19 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-4</td>\n",
+       "      <td>-4.386301</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          DATE  Unemployment Hurricane Hurricane Date      Location  Delta\n",
-       "132 2001-01-01           4.1      Rita     2005-09-18  Houston Area     -4\n",
-       "133 2001-02-01           3.9      Rita     2005-09-18  Houston Area     -4\n",
-       "134 2001-03-01           4.1      Rita     2005-09-18  Houston Area     -4\n",
-       "135 2001-04-01           4.1      Rita     2005-09-18  Houston Area     -4\n",
-       "136 2001-05-01           4.2      Rita     2005-09-18  Houston Area     -4"
+       "          DATE  Unemployment Hurricane Hurricane Date      Location     Delta\n",
+       "132 2001-01-01           4.1      Rita     2005-09-18  Houston Area -4.715068\n",
+       "133 2001-02-01           3.9      Rita     2005-09-18  Houston Area -4.630137\n",
+       "134 2001-03-01           4.1      Rita     2005-09-18  Houston Area -4.553425\n",
+       "135 2001-04-01           4.1      Rita     2005-09-18  Houston Area -4.468493\n",
+       "136 2001-05-01           4.2      Rita     2005-09-18  Houston Area -4.386301"
       ]
      },
      "execution_count": 9,
@@ -859,7 +859,7 @@
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
     "rita_unemployment_df['Delta'] = ((rita_unemployment_df['DATE'] - rita_unemployment_df['Hurricane Date']).dt.days/365)\n",
     "\n",
-    "rita_unemployment_df['Delta'] = rita_unemployment_df['Delta'].astype(int)\n",
+    "rita_unemployment_df['Delta'] = rita_unemployment_df['Delta'].astype(float)\n",
     "\n",
     "#Rename column \n",
     "rita_unemployment_df = rita_unemployment_df.rename(columns={'TXHARR1URN': 'Unemployment'})\n",
@@ -994,7 +994,7 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-4</td>\n",
+       "      <td>-4.715068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -1003,7 +1003,7 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-3</td>\n",
+       "      <td>-3.715068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -1012,7 +1012,7 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-2</td>\n",
+       "      <td>-2.715068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -1021,7 +1021,7 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>-1.715068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -1030,19 +1030,19 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-0.712329</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         DATE Median Hurricane Hurricane Date      Location  Delta\n",
-       "12 2001-01-01  43279      Rita     2005-09-18  Houston Area     -4\n",
-       "13 2002-01-01  42704      Rita     2005-09-18  Houston Area     -3\n",
-       "14 2003-01-01  42262      Rita     2005-09-18  Houston Area     -2\n",
-       "15 2004-01-01  41922      Rita     2005-09-18  Houston Area     -1\n",
-       "16 2005-01-01  44085      Rita     2005-09-18  Houston Area      0"
+       "         DATE Median Hurricane Hurricane Date      Location     Delta\n",
+       "12 2001-01-01  43279      Rita     2005-09-18  Houston Area -4.715068\n",
+       "13 2002-01-01  42704      Rita     2005-09-18  Houston Area -3.715068\n",
+       "14 2003-01-01  42262      Rita     2005-09-18  Houston Area -2.715068\n",
+       "15 2004-01-01  41922      Rita     2005-09-18  Houston Area -1.715068\n",
+       "16 2005-01-01  44085      Rita     2005-09-18  Houston Area -0.712329"
       ]
      },
      "execution_count": 11,
@@ -1067,7 +1067,7 @@
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
     "rita_median_df['Delta'] = ((rita_median_df['DATE'] - rita_median_df['Hurricane Date']).dt.days/365)\n",
     "\n",
-    "rita_median_df['Delta'] = rita_median_df['Delta'].astype(int)\n",
+    "rita_median_df['Delta'] = rita_median_df['Delta'].astype(float)\n",
     "\n",
     "#Rename column \n",
     "rita_median_df = rita_median_df.rename(columns={'MHITX48201A052NCEN': 'Median'})\n",
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "6a74e0b5",
    "metadata": {},
    "outputs": [
@@ -1191,6 +1191,8 @@
        "      <th>Hurricane</th>\n",
        "      <th>Hurricane Date</th>\n",
        "      <th>Location</th>\n",
+       "      <th>Hurricane Year</th>\n",
+       "      <th>Population Year</th>\n",
        "      <th>Delta</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1202,6 +1204,8 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2001</td>\n",
        "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1211,6 +1215,8 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2002</td>\n",
        "      <td>-3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1220,6 +1226,8 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2003</td>\n",
        "      <td>-2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1229,6 +1237,8 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2004</td>\n",
        "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1238,6 +1248,8 @@
        "      <td>Rita</td>\n",
        "      <td>2005-09-18</td>\n",
        "      <td>Houston Area</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2005</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1245,15 +1257,22 @@
        "</div>"
       ],
       "text/plain": [
-       "         DATE  Population Hurricane Hurricane Date      Location  Delta\n",
-       "31 2001-01-01    3483.804      Rita     2005-09-18  Houston Area     -4\n",
-       "32 2002-01-01    3559.095      Rita     2005-09-18  Houston Area     -3\n",
-       "33 2003-01-01    3618.297      Rita     2005-09-18  Houston Area     -2\n",
-       "34 2004-01-01    3672.286      Rita     2005-09-18  Houston Area     -1\n",
-       "35 2005-01-01    3733.714      Rita     2005-09-18  Houston Area      0"
+       "         DATE  Population Hurricane Hurricane Date      Location  \\\n",
+       "31 2001-01-01    3483.804      Rita     2005-09-18  Houston Area   \n",
+       "32 2002-01-01    3559.095      Rita     2005-09-18  Houston Area   \n",
+       "33 2003-01-01    3618.297      Rita     2005-09-18  Houston Area   \n",
+       "34 2004-01-01    3672.286      Rita     2005-09-18  Houston Area   \n",
+       "35 2005-01-01    3733.714      Rita     2005-09-18  Houston Area   \n",
+       "\n",
+       "    Hurricane Year  Population Year  Delta  \n",
+       "31            2005             2001     -4  \n",
+       "32            2005             2002     -3  \n",
+       "33            2005             2003     -2  \n",
+       "34            2005             2004     -1  \n",
+       "35            2005             2005      0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,9 +1290,16 @@
     "\n",
     "rita_population_df['Hurricane Date'] = pd.to_datetime(rita_population_df['Hurricane Date'])\n",
     "\n",
+    "rita_population_df['Hurricane Year'] = pd.to_datetime(rita_population_df['Hurricane Date'],format='%Y%m%d')\n",
+    "\n",
+    "rita_population_df['Hurricane Year'] = pd.DatetimeIndex(rita_population_df['Hurricane Year']).year\n",
+    "\n",
+    "rita_population_df['Population Year'] = pd.to_datetime(rita_population_df['DATE'],format='%Y%m%d')\n",
+    "\n",
+    "rita_population_df['Population Year'] = pd.DatetimeIndex(rita_population_df['Population Year']).year\n",
     "\n",
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
-    "rita_population_df['Delta'] = ((rita_population_df['DATE'] - rita_population_df['Hurricane Date']).dt.days/365)\n",
+    "rita_population_df['Delta'] = ((rita_population_df['Population Year'] - rita_population_df['Hurricane Year']))\n",
     "\n",
     "rita_population_df['Delta'] = rita_population_df['Delta'].astype(int)\n",
     "\n",
@@ -1285,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "aea1c14e",
    "metadata": {},
    "outputs": [],
